# fangit

./: .gitignore  CMakeLists.txt  README.md  config.toml
.github/workflows/: build-linux.yml
build-mac-universal-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-mac-universal-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mac-universal-release/fangit.app/Contents/Frameworks/QtCore.framework/Versions/A/_CodeSignature/: CodeResources
build-mac-universal-release/fangit.app/Contents/Frameworks/QtDBus.framework/Versions/A/: QtDBus
build-mac-universal-release/fangit.app/Contents/Frameworks/QtDBus.framework/Versions/A/_CodeSignature/: CodeResources
build-mac-universal-release/fangit.app/Contents/Frameworks/QtGui.framework/Versions/A/_CodeSignature/: CodeResources
build-mac-universal-release/fangit.app/Contents/Frameworks/QtNetwork.framework/Versions/A/: QtNetwork
build-mac-universal-release/fangit.app/Contents/Frameworks/QtNetwork.framework/Versions/A/_CodeSignature/: CodeResources
build-mac-universal-release/fangit.app/Contents/Frameworks/QtSvg.framework/Versions/A/: QtSvg
build-mac-universal-release/fangit.app/Contents/Frameworks/QtSvg.framework/Versions/A/_CodeSignature/: CodeResources
build-mac-universal-release/fangit.app/Contents/Frameworks/QtWidgets.framework/Versions/A/_CodeSignature/: CodeResources
build-mac-universal-release/fangit.app/Contents/MacOS/: fangit
build-mac-universal-release/fangit.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
build-mac-universal-release/fangit.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjpeg.dylib  libqmacheif.dylib  libqmacjp2.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
build-mac-universal-release/fangit.app/Contents/PlugIns/networkinformation/: libqapplenetworkinformation.dylib
build-mac-universal-release/fangit.app/Contents/PlugIns/styles/: libqmacstyle.dylib
build-mac-universal-release/fangit.app/Contents/PlugIns/tls/: libqcertonlybackend.dylib  libqopensslbackend.dylib  libqsecuretransportbackend.dylib
build-mac-universal-release/fangit.app/Contents/Resources/: AppIcon.icns
build-mac-universal-release/fangit.app/Contents/_CodeSignature/: CodeResources
build-mac-universal-release/fangit_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-mac-universal-release/fangit_autogen/UVLADIE3JM/: moc_CommitBatcher.cpp.d  moc_ConfigManager.cpp  moc_ConfigManager.cpp.d  moc_GitManager.cpp  moc_GitManager.cpp.d  moc_NotifyManager.cpp  moc_NotifyManager.cpp.d  moc_TrayManager.cpp  moc_TrayManager.cpp.d  moc_WatcherManager.cpp  moc_WatcherManager.cpp.d  moc_WorkflowManager.cpp  moc_WorkflowManager.cpp.d  qrc_resources.cpp
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-ninja/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-ninja/fangit.app/Contents/: Info.plist
build-ninja/fangit.app/Contents/MacOS/: fangit
build-ninja/fangit_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-ninja/fangit_autogen/UVLADIE3JM/: moc_CommitBatcher.cpp  moc_CommitBatcher.cpp.d  moc_ConfigManager.cpp  moc_ConfigManager.cpp.d  moc_GitManager.cpp.d  moc_NotifyManager.cpp.d  moc_TrayManager.cpp  moc_TrayManager.cpp.d  moc_WatcherManager.cpp  moc_WatcherManager.cpp.d  moc_WorkflowManager.cpp.d  qrc_resources.cpp
images/: AppIcon.icns
licenses/: FANGIT-license.txt  FiraCode-OFL.txt  GPLv3.txt  LGPLv3.txt
linux/: fangit.desktop
macos/: Info.plist
scripts/: dummyAGL.sh  ninja-release.sh  ninja.sh  png2icns.sh
src/: CommitBatcher.cpp  CommitBatcher.h  ConfigManager.cpp  ConfigManager.h  FileScanner.cpp  FileScanner.h  GitManager.cpp  GitManager.h  MessageFormatter.cpp  MessageFormatter.h  NotifyManager.cpp  NotifyManager.h  SetupWizard.cpp  SetupWizard.h  SetupWizardTheme.h  TrayManager.cpp  TrayManager.h  WatcherManager.cpp  WatcherManager.h  WorkflowManager.cpp  WorkflowManager.h  main.cpp  resources.qrc
